--- a/REDSPACE/REDSPACE/REDSPACE.vcxproj.filters
+++ b/REDSPACE/REDSPACE/REDSPACE.vcxproj.filters
@@ -13,42 +13,72 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav</Extensions>
     </Filter>
+    <Filter Include="Header Files\Background">
+      <UniqueIdentifier>{4447ec6e-f614-46f6-8df2-aff7823d66cb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\GameFiles">
+      <UniqueIdentifier>{ab638f89-864b-4ada-aa2b-339fa4036770}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Background">
+      <UniqueIdentifier>{55a57e4f-16ee-4b9d-8fba-832427d46aec}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\GameFiles">
+      <UniqueIdentifier>{71b434c3-06d8-4f1c-9ddd-eab2b02c2051}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="game.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Background</Filter>
     </ClCompile>
     <ClCompile Include="graphics.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Background</Filter>
     </ClCompile>
     <ClCompile Include="input.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Background</Filter>
     </ClCompile>
     <ClCompile Include="winmain.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Background</Filter>
     </ClCompile>
     <ClCompile Include="redspace.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\GameFiles</Filter>
+    </ClCompile>
+    <ClCompile Include="textureManager.cpp">
+      <Filter>Source Files\Background</Filter>
+    </ClCompile>
+    <ClCompile Include="image.cpp">
+      <Filter>Source Files\Background</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Actor.h">
+      <Filter>Header Files\GameFiles</Filter>
+    </ClInclude>
     <ClInclude Include="constants.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="game.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="graphics.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="input.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Background</Filter>
     </ClInclude>
     <ClInclude Include="gameError.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Background</Filter>
+    </ClInclude>
+    <ClInclude Include="game.h">
+      <Filter>Header Files\Background</Filter>
+    </ClInclude>
+    <ClInclude Include="graphics.h">
+      <Filter>Header Files\Background</Filter>
+    </ClInclude>
+    <ClInclude Include="input.h">
+      <Filter>Header Files\Background</Filter>
+    </ClInclude>
+    <ClInclude Include="Planet.h">
+      <Filter>Header Files\GameFiles</Filter>
     </ClInclude>
     <ClInclude Include="redspace.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\GameFiles</Filter>
+    </ClInclude>
+    <ClInclude Include="textureManager.h">
+      <Filter>Header Files\Background</Filter>
+    </ClInclude>
+    <ClInclude Include="image.h">
+      <Filter>Header Files\Background</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
