--- a/REDSPACE/REDSPACE/REDSPACE.vcxproj
+++ b/REDSPACE/REDSPACE/REDSPACE.vcxproj
@@ -92,6 +92,7 @@
     <ClCompile Include="graphics.cpp" />
     <ClCompile Include="image.cpp" />
     <ClCompile Include="input.cpp" />
+    <ClCompile Include="Missile.cpp" />
     <ClCompile Include="Planet.cpp" />
     <ClCompile Include="redspace.cpp" />
     <ClCompile Include="textureManager.cpp" />
@@ -105,6 +106,7 @@
     <ClInclude Include="graphics.h" />
     <ClInclude Include="image.h" />
     <ClInclude Include="input.h" />
+    <ClInclude Include="Missile.h" />
     <ClInclude Include="Planet.h" />
     <ClInclude Include="redspace.h" />
     <ClInclude Include="textureManager.h" />
