Added new content
Added second planet, made missiles heavier so that have more of a force
when pulled by planets, and added explosion animation, which may or may
not be horrendous.

--- a/REDSPACE/REDSPACE/REDSPACE.vcxproj.filters
+++ b/REDSPACE/REDSPACE/REDSPACE.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="Missile.cpp">
       <Filter>Source Files\GameFiles</Filter>
     </ClCompile>
+    <ClCompile Include="Explosion.cpp">
+      <Filter>Source Files\GameFiles</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h">
@@ -90,6 +93,9 @@
       <Filter>Header Files\Background</Filter>
     </ClInclude>
     <ClInclude Include="Missile.h">
+      <Filter>Header Files\GameFiles</Filter>
+    </ClInclude>
+    <ClInclude Include="Explosion.h">
       <Filter>Header Files\GameFiles</Filter>
     </ClInclude>
   </ItemGroup>
