--- a/REDSPACE/REDSPACE/REDSPACE.vcxproj
+++ b/REDSPACE/REDSPACE/REDSPACE.vcxproj
@@ -96,6 +96,7 @@
     <ClCompile Include="input.cpp" />
     <ClCompile Include="Missile.cpp" />
     <ClCompile Include="Planet.cpp" />
+    <ClCompile Include="PlayerPlanet.cpp" />
     <ClCompile Include="redspace.cpp" />
     <ClCompile Include="textureManager.cpp" />
     <ClCompile Include="winmain.cpp" />
@@ -104,10 +105,12 @@
     <ClInclude Include="Actor.h" />
     <ClInclude Include="audio.h" />
     <ClInclude Include="constants.h" />
+    <ClInclude Include="Controls.h" />
     <ClInclude Include="Explosion.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="gameError.h" />
     <ClInclude Include="graphics.h" />
+    <ClInclude Include="PlayerPlanet.h" />
     <ClInclude Include="image.h" />
     <ClInclude Include="input.h" />
     <ClInclude Include="Missile.h" />
