--- a/REDSPACE/REDSPACE/REDSPACE.vcxproj.filters
+++ b/REDSPACE/REDSPACE/REDSPACE.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="constants.cpp">
       <Filter>Source Files\Background</Filter>
     </ClCompile>
+    <ClCompile Include="Asteroid.cpp">
+      <Filter>Source Files\GameFiles</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h">
@@ -132,6 +135,9 @@
       <Filter>Header Files\Background</Filter>
     </ClInclude>
     <ClInclude Include="Shot.h">
+      <Filter>Header Files\GameFiles</Filter>
+    </ClInclude>
+    <ClInclude Include="Asteroid.h">
       <Filter>Header Files\GameFiles</Filter>
     </ClInclude>
   </ItemGroup>
